# config-generator

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  cgen.py  jinja_filters.py  pyproject.toml  spec_types.py
cgen/: __main__.py  cgen.py  doc.py  jinja_filters.py  spec_types.py
cgen/schema/: definition.schema.json
cgen/templates/cpp-common-base/: _base_macros.j2  _base_options.j2  base_config.cpp.j2  base_config.hpp.j2
cgen/templates/cpp-generic/: _base_macros.j2  _base_options.j2  base_config.cpp.j2  base_config.hpp.j2
cgen/templates/cpp-json/: README.md  _func.hpp.j2  _inc.hpp.j2  config.cpp.j2  config.hpp.j2  template.yml
cgen/templates/cpp-libxml2/: _options.j2  config.cpp.j2  config.hpp.j2
cgen/templates/cpp-pugixml/: README.md  _func.hpp.j2  _inc.hpp.j2  _macros.j2  _options.j2  config.cpp.j2  enums.hpp
cgen/templates/cpp-toml11/: README.md  _func.hpp.j2  _inc.hpp.j2  config.cpp.j2  template.yml
cgen/templates/cpp-xmlwrp/: README.md  _func.hpp.j2  _inc.hpp.j2  _macros.j2  _options.j2  config.cpp.j2  config.hpp.j2
cgen/templates/cpp-yaml/: README.md  _func.hpp.j2  _inc.hpp.j2  config.cpp.j2  config.hpp.j2  from_string.hpp
cgen/templates/doc-html/: doc.html.j2  doc.md.j2
cgen/templates/svg/: config.svg.j2
cgen/templates/xsd/: config.xsd.j2
cpp-json/: README.md  config.cpp.j2
cpp-pugixml/: README.md  _macros.j2  config.cpp.j2  config.hpp.j2
cpp-xmlwrp/: README.md  config.cpp.j2  config.hpp.j2  template.yml
doc-confluence/: README.md  content.html.j2
doc-html/: README.md
html-doc/: doc.html.j2  doc.md.j2
schema/: definition.schema.json
src/cgen/: __init__.py  __version__.py  cgen.py  spec_types.py
templates/cpp-common-base/: README.md  _base_macros.j2  _base_options.j2  base_config.cpp.j2  base_config.hpp.j2
templates/cpp-json/: config.cpp.j2
templates/cpp-libxml2/: _options.j2  config.cpp.j2
templates/cpp-pugixml/: README.md  _options.j2  config.cpp.j2
templates/cpp-toml11/: config.cpp.j2
templates/cpp-xmlwrp/: README.md  _options.j2  config.cpp.j2
templates/cpp-yaml/: README.md  _options.j2  config.cpp.j2
templates/doc-markdown/: configuration.md.j2
templates/xsd/: README.md  config.xsd.j2
tests/cpp-xxxx/: CMakeLists.txt  README.md  cgen.cmake  main.cpp
tests/cpp-xxxx/cmake/: cgen.cmake  cgen2.cmake  embedded_resources.cmake  utils.cmake
tests/cpp-xxxx/data/: definition.yml  example.json  example.toml  example.xml  example.yml
xsd/: README.md  config.xsd.j2
